[build] update dependencies